# qemu-cortex-a7-baremetal

./: CMakeLists.txt  README.md  local-build.sh  run.sh
